004. Player & Enemy character blueprints.

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,5 @@ Plugins/**/Intermediate/*
 /SunsetCloud/Binaries/Win64
 /SunsetCloud/Intermediate
 /SunsetCloud/Saved
+/SunsetCloud/Content/Assets/Animations/Mobility
+/SunsetCloud/Source_MOB
