--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,6 @@ Plugins/**/Intermediate/*
 /SunsetCloud/Saved
 /SunsetCloud/Content/Assets/Animations/Mobility
 /SunsetCloud/Source_MOB
+/SunsetCloud/Content/Assets/Weapons/Hammer
+/SunsetCloud/Content/Assets/Weapons/Hammer
+/SunsetCloud/Content/Assets/Weapons/Hammer
